# static-slicing

./: Cargo.toml  LICENSE  README.md
benches/: static_index_benchmark.rs  static_range_index_benchmark.rs
src/: lib.rs
