[package]
name = "static-slicing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "static_index_benchmark"
harness = false

[[bench]]
name = "static_range_index_benchmark"
harness = false

[features]
default = ["std"]
std = []