[package]
name = "static-slicing"
version = "0.1.1"
edition = "2021"
authors = ["Kai Kaufman <ktkaufman+crates@wpi.edu>"]
rust-version = "1.57"
description = "Utilities for enhanced slicing and indexing"
repository = "https://github.com/ktkaufman03/static-slicing"
license = "BSD-3-Clause"
keywords = ["slice", "index"]
categories = ["no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "static_index_benchmark"
harness = false

[[bench]]
name = "static_range_index_benchmark"
harness = false

[features]
default = ["std"]
std = []